Did a bunch of stuff and now it works on 1.20.6