@@ -4,13 +4,16 @@ import com.b1n_ry.yigd.Yigd;
 import com.b1n_ry.yigd.config.YigdConfig;
 import com.b1n_ry.yigd.data.DeathInfoManager;
 import com.b1n_ry.yigd.util.GraveCompassHelper;
-import com.mojang.authlib.GameProfile;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import net.minecraft.component.DataComponentTypes;
+import net.minecraft.component.type.NbtComponent;
+import net.minecraft.component.type.ProfileComponent;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.NbtHelper;
 import net.minecraft.registry.Registries;
+import net.minecraft.registry.RegistryWrapper;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.server.world.ServerWorld;
 import net.minecraft.util.Identifier;
@@ -55,7 +58,7 @@ public class RespawnComponent {
         return this.graveGenerated;
     }
 
-    public void primeForRespawn(GameProfile profile) {
+    public void primeForRespawn(ProfileComponent profile) {
         DeathInfoManager.INSTANCE.addRespawnComponent(profile, this);
         DeathInfoManager.INSTANCE.markDirty();
     }
@@ -89,8 +92,8 @@ public class RespawnComponent {
                 player.giveItemStack(key);
         }
         if (extraFeaturesConfig.graveCompass.receiveOnRespawn) {
-            List<GraveComponent> playerGraves = DeathInfoManager.INSTANCE.getBackupData(player.getGameProfile());
-            GraveComponent latestGrave = playerGraves.get(playerGraves.size() - 1);
+            List<GraveComponent> playerGraves = DeathInfoManager.INSTANCE.getBackupData(new ProfileComponent(player.getGameProfile()));
+            GraveComponent latestGrave = playerGraves.getLast();
 
             GraveCompassHelper.giveCompass(player, latestGrave.getGraveId(), latestGrave.getPos(), latestGrave.getWorldRegistryKey());
         }
@@ -100,7 +103,7 @@ public class RespawnComponent {
             ItemStack stack = new ItemStack(item, extraItemDrop.count);
             try {
                 if (!extraItemDrop.itemNbt.isEmpty())
-                    stack.setNbt(NbtHelper.fromNbtProviderString(extraItemDrop.itemNbt));
+                    stack.set(DataComponentTypes.CUSTOM_DATA, NbtComponent.of(NbtHelper.fromNbtProviderString(extraItemDrop.itemNbt)));
             }
             catch (CommandSyntaxException e) {
                 Yigd.LOGGER.error("Could not give an item with NBT to player on respawn. Invalid NBT. Falling back to item without NBT");
@@ -114,25 +117,25 @@ public class RespawnComponent {
         this.respawnEffects.applyToPlayer(player);
 
         // If there is an issue, items don't get duped
-        DeathInfoManager.INSTANCE.removeRespawnComponent(player.getGameProfile());
+        DeathInfoManager.INSTANCE.removeRespawnComponent(new ProfileComponent(player.getGameProfile()));
         DeathInfoManager.INSTANCE.markDirty();
     }
 
-    public NbtCompound toNbt() {
+    public NbtCompound toNbt(RegistryWrapper.WrapperLookup registryLookup) {
         NbtCompound nbt = new NbtCompound();
 
-        if (this.soulboundInventory != null) nbt.put("inventory", this.soulboundInventory.toNbt());
+        if (this.soulboundInventory != null) nbt.put("inventory", this.soulboundInventory.toNbt(registryLookup));
         if (this.soulboundExp != null) nbt.put("exp", this.soulboundExp.toNbt());
         nbt.put("effects", this.respawnEffects.toNbt());
 
         return nbt;
     }
 
-    public static RespawnComponent fromNbt(NbtCompound nbt) {
+    public static RespawnComponent fromNbt(NbtCompound nbt, RegistryWrapper.WrapperLookup registryLookup) {
         InventoryComponent soulboundInventory = null;
         if (nbt.contains("inventory")) {
             NbtCompound inventoryNbt = nbt.getCompound("inventory");
-            soulboundInventory = InventoryComponent.fromNbt(inventoryNbt);
+            soulboundInventory = InventoryComponent.fromNbt(inventoryNbt, registryLookup);
         }
 
         ExpComponent expComponent = null;
